@@ -12,6 +12,7 @@ public class MLSyntax {
 	
 	/* Here is an object definition in ML as an example
 	 * 
+	 * <MLVersion "V0.0.1">
 	 * <SomeObjectType:objectName parameter="value">
 	 *  	<-- Some Other Objects Here (Comment) -->
 	 * </>
@@ -20,10 +21,14 @@ public class MLSyntax {
 	
 	/* Here are some parts of the syntax for ML */
 	public static final String TAG_START = "<";
-	public static final String TAG_END = "/>";
+	public static final String TAG_END = ">";
+	public static final String OBJECT_END = "/>";
 	public static final String OBJECT_REFERENCE = "#";
 	public static final String PARAMETER_ASSIGNMENT = "=";
 	public static final String NAME_ASSIGNMENT = ":";
 	public static final String STRING_DEFINITION = "\"";
+	public static final String COMMENT_START = "<--";
+	public static final String COMMENT_END = "-->";
+	public static final String STRING_ESCAPE_CHARACTER = "/";
 	
 }
