@@ -8,6 +8,10 @@
 
 package org.andor.core.parser.utils;
 
+import java.util.List;
+
+import org.andor.utils.ArrayUtils;
+
 public class ParserUtils {
 	
 	/* The static method used to remove any whitespace from the beginning and end of a line */
@@ -19,6 +23,29 @@ public class ParserUtils {
 			line = line.substring(0, line.length() - 1);
 		//Return the line
 		return line;
+	}
+	
+	/* The static method for calculating a string */
+	public static String getString(String s) {
+		//Return the string
+		return s.substring(1, s.length() - 1);
+	}
+	
+	/* The static method used to clean up some code */
+	public static String[] cleanUp(String[] code) {
+		//Convert the array to a list
+		List<String> list = ArrayUtils.toStringList(code);
+		//Go through each line
+		for (int a= 0; a < list.size(); a++) {
+			//Clean up the current line
+			list.set(a, removeWhitespace(list.get(a)));
+			//Check the current line to make sure it isn't empty
+			if (list.get(a).equals(""))
+				//Remove the current line
+				list.remove(a);
+		}
+		//Return the cleaned up code
+		return ArrayUtils.toStringArray(list);
 	}
 	
 }
