@@ -1,4 +1,11 @@
 ------------------------------------------------------
+Release 2 | Beta 1 | Development 2 | Experimental 2
+
+* Added MLConfig
+* Added MLParser
+* Added MLTest
+
+------------------------------------------------------
 Release 2 | Beta 1 | Development 2 | Experimental 1
 
 * Added ZipUtils
